Don't report a keepalive count for persistent pages.

Rather than reporting a keepalive count of zero for extensions with
persistent background pages, return -1, to indicate that the keepalive
count is meaningless for that extension.

BUG=688766

Review-Url: https://codereview.chromium.org/2689963003
Cr-Commit-Position: refs/heads/master@{#450495}

Former-commit-id: 714dde19e175737a2915afce6e303ff587818368